--- a/music-editor-app/public/manifest.json
+++ b/music-editor-app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Music Editor",
+  "name": "Music Editing App",
   "icons": [
     {
       "src": "favicon.ico",
